--- a/requirements.txt
+++ b/requirements.txt
@@ -6,3 +6,12 @@ python-dotenv==0.15.0
 pytz==2020.5
 sqlparse==0.4.1
 toml==0.10.2
+asgiref==3.3.1
+autopep8==1.5.4
+Django==3.1.5
+django-crispy-forms==1.11.0
+pycodestyle==2.6.0
+python-dotenv==0.15.0
+pytz==2020.5
+sqlparse==0.4.1
+toml==0.10.2
